
  [ Marco Túlio Gontijo e Silva ]
  * debian/control: Use one package for line in dependencies.
  * debian/rules: Make build depend only in build-arch to avoid building
    indep packages in all architectures.

  [ Joachim Breitner ]
  * Depend on hscolour in Build-Depends-Indep, fixes FTBFS (does not affect
    binNMUs, so no hurry needed) (Closes: #537000)

 -- Marco Túlio Gontijo e Silva <marcot@riseup.net>  Mon, 13 Jul 2009 11:54:27 -0300

hs-plugins (1.4.1-2) unstable; urgency=low

  * Typo in rules causing directory debian/@ to appear
  * Do nothing in build-indep, and all in binary-indep, to work around current
    buildd vs. policy situation WRT Build-Depends-Indep.

 -- Joachim Breitner <nomeata@debian.org>  Fri, 10 Jul 2009 01:56:27 +0200

hs-plugins (1.4.1-1) unstable; urgency=low

  * New upstream release 
  * Adopt for the Debian Haskell Group
  * Re-do packaging based on haskell-devscripts
    + Build -prof package
    + Build the (non-API) documentation as html and PDF
    + Slightly update debian/copyright
    + rm debian/libghc6-plugins-dev.examples, no examples shipped any more

 -- Joachim Breitner <nomeata@debian.org>  Wed, 08 Jul 2009 23:28:07 +0200

hs-plugins (1.2-2) unstable; urgency=high

  * debian/rules: 
    - Don't build architecture independent packages on the buildd.
  * debian/control:
    - Add libghc6-haskell-src-doc to the Build-Depends-Indep so 
      ./setup haddock can generate references to that package.
  * debian/copyright:
    - Fix lintian warning "debian-copyright-line-too-long"
  * debian/mk-haskell-depends: Removed. Use dh_haskell_depends from
    haskell-devscripts
  * Set urgency to high as this upload fixes a FTBFS on the buildd 
    which is holding hs-plugins out of testing/lenny.

 -- Arjan Oosting <arjan@debian.org>  Sun, 25 May 2008 11:52:36 +0200

hs-plugins (1.2-1) unstable; urgency=low

  * New upstream release.
    - Builds and works with GHC 6.8.2 (Closes: #460374, #402245) 
  * debian/control: