@@ -3,7 +3,7 @@ Section: haskell
 Priority: optional
 Maintainer: Debian Haskell Group <pkg-haskell-maintainers@lists.alioth.debian.org>
 Uploaders: Joachim Breitner <nomeata@debian.org>
-Build-Depends: cdbs
+Build-Depends: cdbs (>> 0.4.58)
   , autotools-dev
   , debhelper (>= 7)
   , haskell-devscripts
