@@ -8,6 +8,8 @@ hs-plugins (1.4.1-3) UNRELEASED; urgency=low
   [ Joachim Breitner ]
   * Depend on hscolour in Build-Depends-Indep, fixes FTBFS (does not affect
     binNMUs, so no hurry needed) (Closes: #537000)
+  * Use newest cdbs, to be able to use build docs in build-indep and
+    still be buildd-friendly
 
  -- Marco Túlio Gontijo e Silva <marcot@riseup.net>  Mon, 13 Jul 2009 11:54:27 -0300
 
